[package]
name = "worker-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.0.3"
suppaftp = "^5.2.0"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6"
rustydav = "0.1.3"
walkdir = "2.4.0"
http = "0.2.9"
normpath = "1.1.1"
